[package]
name = "blockfrost"
version = "0.3.2"
edition = "2021"
keywords = ["blockfrost", "blockchain", "cardano", "ipfs", "nft"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
description = "A Rust SDK for Blockfrost.io API"
license = "Apache-2.0"
repository = "https://github.com/blockfrost/blockfrost-rust"
homepage = "https://blockfrost.io"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paste = "1"
toml = "0.7"

# Used in examples/
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
